Ingress/cloth-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloth-app
  labels:
    app: cloth-app
spec:
  containers:
    - name: cloth-app 
      image: nginx:latest
      ports:
        - containerPort: 80


---

apiVersion: v1 
kind: Service 
metadata:
  name: cloth-app-service
spec: 
  selector: 
    app: cloth-app 
  ports: 
    - port: 80
      targetPort: 80
  type: NodePort
