Ingress/mobile-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mobile-app
  labels:
    app: mobile-app
spec:
  containers:
    - name: mobile-app 
      image: httpd:latest
      ports:
        - containerPort: 80


---

apiVersion: v1 
kind: Service 
metadata:
  name: mobile-app-service
spec: 
  selector: 
    app: mobile-app 
  ports: 
    - port: 80
      targetPort: 80
  type: NodePort
