Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: my-ing
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx
  rules: 
    - host: a584b8fc4c0a24be8b8116a5a5050f5b-1415540948.us-west-2.elb.amazonaws.com
    - http:
        paths: 
        - path: /cloth
          pathType: Prefix
          backend: 
            service: 
              name: cloth-app-service
              port:
                number: 80
        - path: /mobile
          pathType: Prefix
          backend: 
            service: 
              name: mobile-app-service
              port:
                number: 80
